@@ -42,31 +42,81 @@ _ecl_set_max_heap_size(cl_index new_size)
 	ecl_enable_interrupts_env(the_env);
 }
 
-static void
-out_of_memory(cl_env_ptr the_env)
+static int failure;
+static void *
+out_of_memory_check(size_t requested_bytes)
 {
-	the_env->string_pool = Cnil;
-	_ecl_set_max_heap_size(cl_core.max_heap_size +
-			       ecl_get_option(ECL_OPT_HEAP_SAFETY_AREA));
-	cl_error(1, @'ext::storage-exhausted');
+        failure = 1;
+        return 0;
 }
 
-@(defun ext::heap-size (&optional (new_max_heap_size Cnil))
-	cl_index size;
-	cl_object output;
-@
-	ecl_disable_interrupts_env(the_env);
-	size = GC_get_heap_size();
-	ecl_enable_interrupts_env(the_env);
-	output = ecl_make_unsigned_integer(size);
-	if (!Null(new_max_heap_size)) {
-                cl_index new_size = fixnnint(new_max_heap_size);
-                if (new_size > size) {
-                        _ecl_set_max_heap_size(new_size);
+static void
+no_warnings(char *msg, void *arg)
+{
+}
+
+static void *
+out_of_memory(size_t requested_bytes)
+{
+	const cl_env_ptr the_env = ecl_process_env();
+        int interrupts = the_env->disable_interrupts;
+        int method = 0;
+        if (!interrupts)
+                ecl_disable_interrupts_env(the_env);
+#ifdef ECL_THREADS
+	/* The out of memory condition may happen in more than one thread */
+        /* But then we have to ensure the error has not been solved */
+	ERROR_HANDLER_LOCK();
+#endif
+        failure = 0;
+        GC_gcollect();
+        GC_oom_fn = out_of_memory_check;
+        {
+                void *output = GC_MALLOC(requested_bytes);
+                GC_oom_fn = out_of_memory;
+                if (output != 0 && failure == 0) {
+                        ERROR_HANDLER_UNLOCK();
+                        return output;
                 }
         }
-	@(return output);
-@)
+        if (cl_core.max_heap_size == 0) {
+                /* We did not set any limit in the amount of memory,
+                 * yet we failed, or we had some limits but we have
+                 * not reached them. */
+                if (cl_core.safety_region) {
+                        /* We can free some memory and try handling the error */
+                        GC_free(cl_core.safety_region);
+                        the_env->string_pool = Cnil;
+                        cl_core.safety_region = 0;
+                        method = 0;
+                } else {
+                        /* No possibility of continuing */
+                        method = 2;
+                }
+        } else {
+                cl_core.max_heap_size += ecl_get_option(ECL_OPT_HEAP_SAFETY_AREA);
+                GC_set_max_heap_size(cl_core.max_heap_size);
+                method = 1;
+        }
+	ERROR_HANDLER_UNLOCK();
+        ecl_enable_interrupts_env(the_env);
+        switch (method) {
+        case 0:	cl_error(1, @'ext::storage-exhausted');
+                break;
+        case 1: cl_cerror(2, make_constant_base_string("Extend heap size"),
+                          @'ext::storage-exhausted');
+                break;
+        default:
+                ecl_internal_error("Memory exhausted, quitting program.");
+                break;
+        }
+        if (!interrupts)
+                ecl_disable_interrupts_env(the_env);
+        GC_set_max_heap_size(cl_core.max_heap_size +=
+                             cl_core.max_heap_size / 2);
+        /* Default allocation. Note that we do not allocate atomic. */
+        return GC_MALLOC(requested_bytes);
+}
 
 #ifdef alloc_object
 #undef alloc_object
@@ -141,18 +191,14 @@ ecl_alloc_object(cl_type t)
 		ecl_disable_interrupts_env(the_env);
 		obj = (cl_object)GC_MALLOC(type_size[t]);
 		ecl_enable_interrupts_env(the_env);
-		if (obj != NULL) {
-			obj->d.t = t;
-			return obj;
-		}
+                obj->d.t = t;
+                return obj;
 		break;
 	}
 	default:
 		printf("\ttype = %d\n", t);
 		ecl_internal_error("alloc botch.");
 	}
-	out_of_memory(the_env);
-	return OBJNULL;
 }
 
 #ifdef make_cons
@@ -167,7 +213,6 @@ ecl_cons(cl_object a, cl_object d)
 	ecl_disable_interrupts_env(the_env);
 	obj = GC_MALLOC(sizeof(struct ecl_cons));
 	ecl_enable_interrupts_env(the_env);
-	if (obj == NULL) out_of_memory(the_env);
 #ifdef ECL_SMALL_CONS
 	obj->car = a;
 	obj->cdr = d;
@@ -188,7 +233,6 @@ ecl_list1(cl_object a)
 	ecl_disable_interrupts_env(the_env);
 	obj = GC_MALLOC(sizeof(struct ecl_cons));
 	ecl_enable_interrupts_env(the_env);
-	if (obj == NULL) out_of_memory(the_env);
 #ifdef ECL_SMALL_CONS
 	obj->car = a;
 	obj->cdr = Cnil;
@@ -220,7 +264,6 @@ ecl_alloc_uncollectable(size_t size)
 	ecl_disable_interrupts_env(the_env);
 	output = GC_MALLOC_UNCOLLECTABLE(size);
 	ecl_enable_interrupts_env(the_env);
-	if (output == NULL) out_of_memory(the_env);
 	return output;
 }
 
@@ -253,7 +296,6 @@ ecl_alloc(cl_index n)
 	ecl_disable_interrupts_env(the_env);
 	output = ecl_alloc_unprotected(n);
 	ecl_enable_interrupts_env(the_env);
-	if (output == NULL) out_of_memory(the_env);
 	return output;
 }
 
@@ -265,7 +307,6 @@ ecl_alloc_atomic(cl_index n)
 	ecl_disable_interrupts_env(the_env);
 	output = ecl_alloc_atomic_unprotected(n);
 	ecl_enable_interrupts_env(the_env);
-	if (output == NULL) out_of_memory(the_env);
 	return output;
 }
 
@@ -365,10 +406,15 @@ init_alloc(void)
 	init_tm(t_longfloat, "LONG-FLOAT", sizeof(struct ecl_long_float));
 #endif
 
+        /* Save some memory for the case we get tight. */
+        cl_core.safety_region = ecl_alloc_atomic(sizeof(cl_fixnum)*1024);
+
 	old_GC_push_other_roots = GC_push_other_roots;
 	GC_push_other_roots = stacks_scanner;
 	GC_start_call_back = (void (*)())finalize_queued;
 	GC_java_finalization = 1;
+        GC_oom_fn = out_of_memory;
+        GC_set_warn_proc(no_warnings);
 	GC_enable();
 }
 
