@@ -1717,6 +1717,7 @@ cl_symbols[] = {
 
 {EXT_ "INTERACTIVE-INTERRUPT", EXT_ORDINARY, NULL, -1, OBJNULL},
 
+{EXT_ "STORAGE-EXHAUSTED", EXT_ORDINARY, NULL, -1, OBJNULL},
 {EXT_ "STACK-OVERFLOW", EXT_ORDINARY, NULL, -1, OBJNULL},
 {EXT_ "STACK-OVERFLOW-SIZE", EXT_ORDINARY, NULL, -1, OBJNULL},
 {EXT_ "STACK-OVERFLOW-TYPE", EXT_ORDINARY, NULL, -1, OBJNULL},
@@ -1724,6 +1725,7 @@ cl_symbols[] = {
 {EXT_ "FRAME-STACK", EXT_ORDINARY, NULL, -1, OBJNULL},
 {EXT_ "LISP-STACK", EXT_ORDINARY, NULL, -1, OBJNULL},
 {EXT_ "C-STACK", EXT_ORDINARY, NULL, -1, OBJNULL},
+{EXT_ "HEAP-SIZE", EXT_ORDINARY, NULL, -1, OBJNULL},
 {EXT_ "SET-LIMIT", EXT_ORDINARY, si_set_limit, 2, OBJNULL},
 {EXT_ "GET-LIMIT", EXT_ORDINARY, si_get_limit, 1, OBJNULL},
 {EXT_ "SEGMENTATION-VIOLATION", EXT_ORDINARY, NULL, -1, OBJNULL},
@@ -1737,8 +1739,6 @@ cl_symbols[] = {
 {KEY_ "UTF-8", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "UCS-2", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "UCS-4", KEYWORD, NULL, -1, OBJNULL},
-
-{EXT_ "STORAGE-EXHAUSTED", EXT_ORDINARY, NULL, -1, OBJNULL},
 
 {EXT_ "CONSTANTLY-T", EXT_ORDINARY, NULL, -1, OBJNULL},
 {EXT_ "CONSTANTLY-NIL", EXT_ORDINARY, NULL, -1, OBJNULL},
@@ -1764,10 +1764,6 @@ cl_symbols[] = {
 {SYS_ "+UNICODE-DATABASE+", SI_CONSTANT, NULL, -1, Cnil},
 
 {SYS_ "COPY-FILE", SI_ORDINARY, si_copy_file, 2, OBJNULL},
-
-#ifdef GBC_BOEHM
-{EXT_ "HEAP-SIZE", EXT_ORDINARY, si_heap_size, -1, OBJNULL},
-#endif
 
 {EXT_ "FILL-ARRAY-WITH-ELT", EXT_ORDINARY, si_fill_array_with_elt, 4, OBJNULL},
 
